--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "@okta/okta-angular": "^3.0.1",
     "bootstrap": "^3.4.1",
     "rxjs": "~6.6.6",
     "tslib": "^2.0.0",
