--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@angular/compiler": "~11.2.3",
     "@angular/core": "~11.2.3",
     "@angular/forms": "~11.2.3",
+    "@angular/localize": "~11.2.3",
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@okta/okta-angular": "^3.0.1",
-    "bootstrap": "^3.4.1",
+    "bootstrap": "^4.6.0",
     "rxjs": "~6.6.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
