--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.2.3",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@okta/okta-angular": "^3.0.1",
+    "@okta/okta-signin-widget": "^5.4.1",
     "bootstrap": "^4.6.0",
     "rxjs": "~6.6.6",
     "tslib": "^2.0.0",
